--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -175,7 +175,7 @@ jobs:
   
       - name: Publish Build to AWS CodeArtifact
         if: env.should_deploy == 'true'
-        working-directory: ./build
+        working-directory: .
         run: |
           npm set registry "https://${{ inputs.aws-domain }}-${{ inputs.aws-domain-owner }}.d.codeartifact.${{ inputs.aws-region }}.amazonaws.com/npm/${{ inputs.npm-repository }}/"
           npm publish
@@ -185,7 +185,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: react-app-build
-          path: build/
+          path: .
 
        # Step to download the artifact
       - name: Download Build Artifact
