--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          cd sbuild
           npm install
           npm install --save-dev @babel/plugin-transform-private-property-in-object \
             @babel/plugin-transform-optional-chaining \
@@ -60,7 +61,9 @@ jobs:
           npm audit fix || true
 
       - name: Run Unit Tests with Jest
-        run: npm test -- --watchAll=false --coverage --forceExit
+        run: |
+          cd sbuild
+          npm test -- --watchAll=false --coverage --forceExit
 
   sonarqube:
     name: SonarQube Scan
