--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -190,7 +190,13 @@ jobs:
         run: |
           npm set registry "https://${{ inputs.aws-domain }}-${{ inputs.aws-domain-owner }}.d.codeartifact.${{ inputs.aws-region }}.amazonaws.com/npm/${{ inputs.npm-repository }}/"
           npm publish
-  
+          
+      - name: Additional Artifact Handling
+        if: env.should_deploy == 'true'
+        run: |
+          echo "Performing additional artifact handling..."
+          zip -r react-app-build.zip ./build
+        
       - name: Upload Build Artifact to GitHub
         if: env.should_deploy == 'true'
         uses: actions/upload-artifact@v3
